<resources>
    <string name="app_name">Lesson7</string>
    <string name="add_to_backstack">Add to backstack?</string>
    <string name="please_select">Please, select:</string>
    <string name="add">add</string>
    <string name="replace">replace</string>
    <string name="create_fragment">Create fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>